[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrm_fairness_auditor"
version = "0.0.0"
authors = [
  { name="Data Science Geek", email="datascienceassignmentsolution@gmail.com" },
]
description = "Fairness Auditor for AI/ML models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/data-science-geek86/MRM_FAIRNESS_AUDITOR"
